navbar mobile collapsing. fixed keep checked after filter in modal. set greyDetails color.modal transition.

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -186,6 +186,8 @@ main .favorite-page-main-content, main .teste {
   left: 0;
   width: 100%;
   height: 100%;
+  -webkit-animation: fadeIn ease 0.3s;
+          animation: fadeIn ease 0.3s;
 }
 
 .modal .modal-container {
@@ -197,6 +199,8 @@ main .favorite-page-main-content, main .teste {
   bottom: 0;
   overflow-y: auto;
   padding: 1.5rem;
+  -webkit-animation: modalContainerIn 0.3s;
+          animation: modalContainerIn 0.3s;
 }
 
 .modal .modal-container header {
@@ -269,7 +273,7 @@ main .favorite-page-main-content, main .teste {
 .modal .modal-container .modal-filters-container .modal-filter #course-select {
   margin-top: 0.2rem;
   border-radius: 0.2rem;
-  border: 1px solid rgba(150, 150, 150, 0.8);
+  border: 1px solid rgba(204, 204, 204, 0.8);
   padding: 1rem 0.5rem;
   width: 100%;
   background: none;
@@ -291,7 +295,7 @@ main .favorite-page-main-content, main .teste {
   z-index: -1;
   width: 0.5rem;
   height: 0.5rem;
-  border: solid #969696;
+  border: solid #cccccc;
   border-width: 0 0 2px 2px;
   position: absolute;
   top: 50%;
@@ -337,7 +341,7 @@ main .favorite-page-main-content, main .teste {
   height: 1.1rem;
   width: 1.1rem;
   border-radius: 0.15rem;
-  background-color: rgba(150, 150, 150, 0.2);
+  background-color: rgba(204, 204, 204, 0.8);
   margin-right: 0.5rem;
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
@@ -546,10 +550,11 @@ main .favorite-page-main-content, main .teste {
 }
 
 .modal .modal-container .modal-btns .modal-add-btn:disabled {
-  background: rgba(150, 150, 150, 0.8);
-  border: 1px solid #646464;
+  background: rgba(204, 204, 204, 0.8);
+  border: 1px solid #cccccc;
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
+  cursor: default;
 }
 
 @media (min-width: 992px) {
@@ -645,9 +650,81 @@ main .favorite-page-main-content, main .teste {
   }
 }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media (min-width: 992px) {
+  @-webkit-keyframes modalContainerIn {
+    0% {
+      -webkit-transform: scale(0) translateX(-50%);
+              transform: scale(0) translateX(-50%);
+      -webkit-transform-origin: -10% 50%;
+              transform-origin: -10% 50%;
+    }
+    100% {
+      -webkit-transform: scale(1) translateX(-50%);
+              transform: scale(1) translateX(-50%);
+      -webkit-transform-origin: -10% 50%;
+              transform-origin: -10% 50%;
+    }
+  }
+  @keyframes modalContainerIn {
+    0% {
+      -webkit-transform: scale(0) translateX(-50%);
+              transform: scale(0) translateX(-50%);
+      -webkit-transform-origin: -10% 50%;
+              transform-origin: -10% 50%;
+    }
+    100% {
+      -webkit-transform: scale(1) translateX(-50%);
+              transform: scale(1) translateX(-50%);
+      -webkit-transform-origin: -10% 50%;
+              transform-origin: -10% 50%;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  @-webkit-keyframes modalContainerIn {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @keyframes modalContainerIn {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+}
+
 .modal-course-list-item {
-  border-top: 1px solid rgba(150, 150, 150, 0.3);
-  border-bottom: 1px solid rgba(150, 150, 150, 0.3);
+  border-top: 1px solid rgba(204, 204, 204, 0.8);
+  border-bottom: 1px solid rgba(204, 204, 204, 0.8);
   padding: 1.5rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -832,8 +909,8 @@ main .favorite-page-main-content, main .teste {
 .favorite-card .favorite-card-course-info-center {
   margin: 1.5rem 0;
   padding: 1.5rem 0;
-  border-top: 3px solid #ececec;
-  border-bottom: 3px solid #ececec;
+  border-top: 2px solid rgba(204, 204, 204, 0.8);
+  border-bottom: 2px solid rgba(204, 204, 204, 0.8);
 }
 
 .favorite-card .favorite-card-course-info-center .favorite-start-date {
@@ -922,8 +999,8 @@ main .favorite-page-main-content, main .teste {
 }
 
 .modal-add-btn:disabled {
-  background: rgba(150, 150, 150, 0.8);
-  border: 1px solid #646464;
+  background: rgba(204, 204, 204, 0.8);
+  border: 1px solid #cccccc;
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
@@ -1127,6 +1204,7 @@ header .nav-main-ul {
 }
 
 header .nav-main-ul .menu-title {
+  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1145,39 +1223,15 @@ header .nav-main-ul .dropdown-navbar {
   font-size: 0.95rem;
 }
 
-@media (min-width: 992px) {
-  header .nav-main-ul .dropdown-navbar {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    padding: 0 5%;
-  }
+header .nav-main-ul .dropdown-navbar li {
+  margin-left: 3rem;
+  height: 2.5rem;
 }
 
-@media (min-width: 992px) {
-  header .nav-main-ul .dropdown-navbar li {
-    display: inherit;
-    margin-left: 3rem;
-    height: 2.5rem;
-  }
-}
-
-@media (min-width: 992px) {
-  header .nav-main-ul .dropdown-navbar li .nav-item-active {
-    padding: 0 1rem;
-    display: inline-block;
-    background: #007a8d;
-  }
-}
-
-header .nav-main-ul .navbar-closed {
-  display: none;
-}
-
-@media (min-width: 992px) {
-  header .nav-main-ul .navbar-closed {
-    display: inherit;
-  }
+header .nav-main-ul .dropdown-navbar li .nav-item-active {
+  padding: 0 1rem;
+  display: inline-block;
+  background: #007a8d;
 }
 
 @media (min-width: 992px) {
@@ -1187,6 +1241,46 @@ header .nav-main-ul .navbar-closed {
             justify-content: flex-start;
     padding: 0 5%;
   }
+}
+
+header .navbar-closed li {
+  height: 0;
+  opacity: 0;
+  -webkit-transition: 0.1s ease;
+  transition: 0.1s ease;
+  text-align: center;
+}
+
+header .navbar-opened {
+  margin-bottom: 2rem;
+}
+
+header .navbar-opened li {
+  opacity: 1;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+  height: 100%;
+  padding: 1rem 0.5rem;
+  text-align: center;
+  width: 100%;
+  border-bottom: 2px solid #ccc;
+}
+
+header .navbar-opened li a {
+  width: 100%;
+  display: block;
+}
+
+header .navbar-opened li:hover {
+  background: #007a8d;
+  color: #fbfbfb;
+  font-weight: 700;
+}
+
+header .navbar-opened .nav-item-active {
+  background: #007a8d;
+  color: #fbfbfb;
+  font-weight: 700;
 }
 
 header .breadcrumb-container {
@@ -1425,7 +1519,7 @@ li {
 
 @media (min-width: 992px) {
   .desktop-content {
-    display: block !important;
+    display: inherit !important;
   }
 }
 
