--- a/src/style/_modalAddFavorites.scss
+++ b/src/style/_modalAddFavorites.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  animation: fadeIn ease 0.3s;
   .modal-container {
     z-index: 9999 !important;
     background: $greyBg;
@@ -13,6 +14,7 @@
     bottom: 0;
     overflow-y: auto;
     padding: 1.5rem;
+    animation: modalContainerIn 0.3s;
     header {
       color: $blackText;
       h2 {
@@ -66,7 +68,7 @@
         #course-select {
           margin-top: 0.2rem;
           border-radius: 0.2rem;
-          border: 1px solid rgba(150, 150, 150, 0.8);
+          border: 1px solid $greyDetailsOpaque;
           padding: 1rem 0.5rem;
           width: 100%;
           background: none;
@@ -82,7 +84,7 @@
             z-index: -1;
             width: 0.5rem;
             height: 0.5rem;
-            border: solid rgb(150, 150, 150);
+            border: solid $greyDetails;
             border-width: 0 0 2px 2px;
             position: absolute;
             top: 50%;
@@ -112,7 +114,7 @@
               height: 1.1rem;
               width: 1.1rem;
               border-radius: 0.15rem;
-              background-color: rgba(150, 150, 150, 0.2);
+              background-color: $greyDetailsOpaque;
               margin-right: 0.5rem;
               transition: 0.2s ease;
             }
@@ -256,9 +258,10 @@
         border-radius: 0.4rem;
         transition: 0.2s ease;
         &:disabled {
-          background: rgba(150, 150, 150, 0.8);
-          border: 1px solid rgb(100, 100, 100);
+          background: $greyDetailsOpaque;
+          border: 1px solid $greyDetails;
           transition: 0.2s ease;
+          cursor: default;
         }
       }
       @media (min-width: $breakpoint) {
@@ -330,3 +333,39 @@
     transform: translate(-50%, -70%) rotate(360deg);
   }
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+@media (min-width: $breakpoint) {
+  @keyframes modalContainerIn {
+    0% {
+      transform: scale(0) translateX(-50%);  
+      transform-origin: -10% 50%;
+    }
+    100% {
+      transform: scale(1) translateX(-50%);
+      transform-origin: -10% 50%;
+    }
+  }
+}
+
+@media (max-width: $breakpoint) {
+  @keyframes modalContainerIn {
+    0% {
+      transform: scale(0);    
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+}
+
