--- a/src/style/_modalResult.scss
+++ b/src/style/_modalResult.scss
@@ -1,6 +1,6 @@
 .modal-course-list-item {
-  border-top: 1px solid rgba(150, 150, 150, 0.3);
-  border-bottom: 1px solid rgba(150, 150, 150, 0.3);
+  border-top: 1px solid $greyDetailsOpaque;
+  border-bottom: 1px solid $greyDetailsOpaque;
   padding: 1.5rem 0;
   display: flex;
   align-items: center;
