--- a/src/style/_userFavorite.scss
+++ b/src/style/_userFavorite.scss
@@ -56,8 +56,8 @@
   .favorite-card-course-info-center {
     margin: 1.5rem 0;
     padding: 1.5rem 0;
-    border-top: 3px solid rgb(236, 236, 236);
-    border-bottom: 3px solid rgb(236, 236, 236);
+    border-top: 2px solid $greyDetailsOpaque;
+    border-bottom: 2px solid $greyDetailsOpaque;
     .favorite-start-date {
       font-size: 0.8rem;
     }
@@ -131,8 +131,8 @@
   width: 55%;
   transition: 0.2s ease;
   &:disabled {
-    background: rgba(150, 150, 150, 0.8);
-    border: 1px solid rgb(100, 100, 100);
+    background: $greyDetailsOpaque;
+    border: 1px solid $greyDetails;
     transition: 0.2s ease;
   }
 }
